# DistributedWebScraping

./: .gitignore  CMakeLists.txt  README.md  boost_config.cmake  build.py  lock free data structures  nlohmann_json_config.cmake  poco_config.cmake
Common/: CMakeLists.txt  file_list.cmake
Common/include/: networking.h
Common/src/: networking.cpp
Dependencies/: CMakeLists.txt
Dependencies/Poco/: CMakeLists.txt
Dependencies/argparse/: CMakeLists.txt
Dependencies/boost/: CMakeLists.txt
Dependencies/nlohmann_json/: CMAKELISTS.txt
Dependencies/nlohmann_json/CMakeBUILD/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  nlohmann_json.pc  nlohmann_json.sln
DistributedWebScraping/: DistributedWebScraping.sln
MasterCore/: CMakeLists.txt
MasterNode/: CMakeLists.txt
Orchestrator/: CMakeLists.txt
Orchestrator/src/: orchestrator.cpp
RestServer/: CMakeLists.txt  file_list.cmake
RestServer/include/: RestServer.h
RestServer/src/: JSONRequestHandlerFactory.cpp  RestServer.cpp
WebService/: CMakeLists.txt  file_list.cmake
WebService/include/: JSONRequestHandlerFactory.h  WebServiceBase.h
WebService/src/: JSONRequestHandlerFactory.cpp  WebServiceBase.cpp
WorkerCore/: CMakeLists.txt  file_list.cmake
WorkerCore/include/: WorkerCore.h  worker_core.h
WorkerCore/src/: WorkerCore.cpp  worker_core.cpp
WorkerNode/: CMakeLists.txt
WorkerNode/src/: WorkerNode.cpp  worker_node.cpp
cmake/: FindOpenSSL.cmake
